[gd_scene load_steps=4 format=3 uid="uid://cip0y4kupgh0"]

[ext_resource type="Script" path="res://scripts/game/virus.gd" id="1_ghduq"]
[ext_resource type="Texture2D" uid="uid://coc3eqsvto8rg" path="res://assets/imgs/game sprites/virus.png" id="2_embg1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i51iw"]
size = Vector2(450, 452.5)

[node name="virus" type="Node2D"]
z_index = 4
scale = Vector2(0.4, 0.4)
script = ExtResource("1_ghduq")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(226, 226)
texture = ExtResource("2_embg1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(225, 226.25)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_i51iw")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
